--- a/Bankin/Application/BanksList/Cells/BankTableViewCell.xib
+++ b/Bankin/Application/BanksList/Cells/BankTableViewCell.xib
@@ -10,21 +10,37 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="BankTableViewCell" customModule="Bankin" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="175" id="KGk-i7-Jjw" customClass="BankTableViewCell" customModule="Bankin" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="374" height="175"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="374" height="175"/>
                 <autoresizingMask key="autoresizingMask"/>
-                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bdf-dK-hcb">
+                        <rect key="frame" x="5" y="5" width="364" height="165"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstItem="Bdf-dK-hcb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="mF5-2N-6BL"/>
+                    <constraint firstItem="Bdf-dK-hcb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="nNi-ob-Lm3"/>
+                    <constraint firstAttribute="bottom" secondItem="Bdf-dK-hcb" secondAttribute="bottom" constant="5" id="qbj-vQ-B8f"/>
+                    <constraint firstAttribute="trailing" secondItem="Bdf-dK-hcb" secondAttribute="trailing" constant="5" id="xAf-7a-8mD"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="139" y="80"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <connections>
+                <outlet property="contentedView" destination="Bdf-dK-hcb" id="WrC-wk-04t"/>
+            </connections>
+            <point key="canvasLocation" x="176.81159420289856" y="123.54910714285714"/>
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
