--- a/Bankin/Application/BanksList/Cells/BankTableViewCell.xib
+++ b/Bankin/Application/BanksList/Cells/BankTableViewCell.xib
@@ -10,16 +10,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="175" id="KGk-i7-Jjw" customClass="BankTableViewCell" customModule="Bankin" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="374" height="175"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="BankTableViewCell" customModule="Bankin" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="354" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="374" height="175"/>
+                <rect key="frame" x="0.0" y="0.0" width="354" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bdf-dK-hcb">
-                        <rect key="frame" x="5" y="5" width="364" height="165"/>
+                        <rect key="frame" x="5" y="5" width="344" height="70"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zEk-BW-5QB">
+                                <rect key="frame" x="15" y="5" width="80" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="cnr-aW-8O6"/>
+                                    <constraint firstAttribute="width" constant="80" id="p3R-w4-fRF"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0DZ-au-igv">
+                                <rect key="frame" x="110" y="0.0" width="219" height="70"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="0DZ-au-igv" secondAttribute="trailing" constant="15" id="5xg-W0-RZk"/>
+                            <constraint firstItem="zEk-BW-5QB" firstAttribute="leading" secondItem="Bdf-dK-hcb" secondAttribute="leading" constant="15" id="G3O-ej-nAZ"/>
+                            <constraint firstItem="0DZ-au-igv" firstAttribute="top" secondItem="Bdf-dK-hcb" secondAttribute="top" id="QU3-vQ-Qhe"/>
+                            <constraint firstItem="zEk-BW-5QB" firstAttribute="centerY" secondItem="Bdf-dK-hcb" secondAttribute="centerY" id="SK2-yU-MEU"/>
+                            <constraint firstItem="0DZ-au-igv" firstAttribute="leading" secondItem="zEk-BW-5QB" secondAttribute="trailing" constant="15" id="giH-mq-Ur9"/>
+                            <constraint firstAttribute="bottom" secondItem="0DZ-au-igv" secondAttribute="bottom" id="s5T-P2-gil"/>
+                        </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -33,9 +56,11 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="bankIconImageView" destination="zEk-BW-5QB" id="HCf-TK-VBu"/>
+                <outlet property="bankTitleLabel" destination="0DZ-au-igv" id="4NC-QS-hnK"/>
                 <outlet property="contentedView" destination="Bdf-dK-hcb" id="WrC-wk-04t"/>
             </connections>
-            <point key="canvasLocation" x="176.81159420289856" y="123.54910714285714"/>
+            <point key="canvasLocation" x="162.31884057971016" y="91.741071428571431"/>
         </tableViewCell>
     </objects>
     <resources>
